# git-version-macro

./: Cargo.toml
git-version-macro/: Cargo.toml
git-version-macro-internal/: Cargo.toml
git-version-macro/src/: lib.rs
git-version-macro/tests/: version.rs
src/: lib.rs
tests/: version.rs
